syntax = "proto3";

option java_multiple_files = true;
option java_package = "generated.grpc.smartLightingService";
option java_outer_classname = "SmartLightServiceImpl";

service LightingService {
    rpc ToggleLight(LightRequest) returns (LightResponse);
    rpc SetSchedule(ScheduleRequest) returns (ScheduleResponse);
}

message LightRequest {
    string light_id = 1;
    bool turn_on = 2;
}

message LightResponse {
    string status = 1;
}

message ScheduleRequest {
    string light_id = 1;
    string time_on = 2;
    string time_off = 3;
}

message ScheduleResponse {
    string confirmation = 1;
}